--- a/IDP/IDP.Api/appsettings.json
+++ b/IDP/IDP.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-7LRQT479\\SQLEXPRESS01;Database=IDPDb;Trusted_Connection=true;TrustServerCertificate=true"
+    "Default": ""
   }
 }
